--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,25 @@
-events {}
+events {
+}
 
 http {
-    
+
     include mime.types;
 
     upstream backendserver {
-        server 127.0.0.1:1111; 
-        server 127.0.0.1:2222; 
-        server 127.0.0.1:3333; 
-        server 127.0.0.1:4444; 
-        }
+        server 127.0.0.1:1111;
+        server 127.0.0.1:2222;
+        server 127.0.0.1:3333;
+        server 127.0.0.1:4444;
+    }
+    error_log /home/linuxbrew/.linuxbrew/logs/nginx_error.log warn;
 
     server {
         listen 8080;
-            root /mnt/c/Users/phat1/Documents/GitHub/train_nginx;
+        root /mnt/c/Users/phat1/Documents/GitHub/train_nginx;
 
         rewrite ^/number/(\w+) /count/$1;
-        
-        location / {
+
+        location / { #ghi đèn lên listen 8080 hiện tại => 
             proxy_pass http://backendserver/;
         }
 
@@ -30,22 +32,30 @@ http {
             root /mnt/c/Users/phat1/Documents/GitHub/train_nginx;
         }
 
-        location /cards {#khong co file cards -> chay tu fruits ra alias
+        location /cards {
             alias /mnt/c/Users/phat1/Documents/GitHub/train_nginx/fruits;
         }
 
-        location /vegatables{
+        location /vegatables {
             root /mnt/c/Users/phat1/Documents/GitHub/train_nginx;
             try_files /vegatables/veggies.html /index.html = 404;
         }
 
-        location /crops{
+        location /crops {
             return 307 /fruits;
+        }
+
+        location /cropsmore {
+            # proxy_pass http://127.0.0.1:7777$request_uri;
+            proxy_pass http://127.0.0.1:7777;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         error_page 404 /index.html;
     }
-    server{
-       
+    server {
+
     }
 }
